@@ -64,7 +64,6 @@ dhcpcd_get_vars() {
 # otherwise return 1
 dhcpcd_stop() {
 	local iface=$1 count signal pidfile="/var/run/dhcpcd-$1.pid" dhcp
-	local ifvar=${1//[![:word:]]/_}
 	
 	dhcpcd_check_installed || return 0
 
@@ -73,6 +72,7 @@ dhcpcd_stop() {
 	ebegin "Stopping dhcpcd on ${iface}"
 	local pid=$( < ${pidfile} )
 
+	local ifvar=$( bash_variable ${iface} )
 	eval dhcp=\" \$\{dhcp_${ifvar}\} \"
 	if [[ ${dhcp} == *' release '* ]]; then
 		signal="HUP"
@@ -93,7 +93,7 @@ dhcpcd_stop() {
 # Returns 0 (true) when a DHCP address is obtained, otherwise 1
 dhcpcd_start() {
 	local iface=$1 opts hostname pidfile="/var/run/dhcpcd-$1.pid" dhcp
-	local ifvar=${1//[![:word:]]/_}
+	local ifvar=$( bash_variable ${iface} )
 
 	interface_exists ${iface} true || return 1
 
