@@ -55,13 +55,14 @@ essidnet_check_depends() {
 # of the AP connected to. MAC configuration takes precedence
 # Always returns 0
 essidnet_pre_start() {
-	local iface=${1} ifvar=${1//[![:word:]]/_}
+	local iface=${1}
 
 	wireless_check_extensions ${iface} || return 0
 
 	local mod func evars evar vars x i mvars mac=$( wireless_get_ap_mac_address ${iface} )
+	local ifvar=$( bash_variable ${iface} )
 	local ESSID=$( wireless_get_essid ${iface} )
-	local essid=${ESSID//[![:word:]]/_}
+	local essid=$( bash_variable ${ESSID} )
 	mac=${mac//:/}
 
 	vebegin "Configuring ${iface} for \"${ESSID//\\\\/\\\\}\"" 2>/dev/null
