@@ -179,7 +179,7 @@ ifconfig_get_vars() {
 #
 # Returns config and config_fallback for the given interface
 ifconfig_get_old_config() {
-	local iface=$1 ifvar=${1//[![:word:]]/_} i inet6
+	local iface=$1 ifvar=$( bash_variable $1 ) i inet6
 
 	eval config=( \"\$\{ifconfig_${ifvar}\[@\]\}\" )
 	eval config_fallback=( \"\$\{ifconfig_fallback_${ifvar}\[@\]\}\" )
@@ -243,7 +243,7 @@ ifconfig_iface_stop() {
 # fail, the routine should still return success to indicate that
 # net.eth0 was successful
 ifconfig_post_start() {
-	local iface=$1 ifvar=${1//[![:word:]]/_} routes x
+	local iface=$1 ifvar=$( bash_variable $1 ) routes x
 
 	# Make sure interface is marked UP
 	ifconfig_up ${iface}
